tests/common/snapshots/test_diag_binding__common__dup_cons_fail1.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: multipile constructor varible definition!
2 | | A
  |   ^
the identifier A is defined here
3 | | A
  |   ^
and it is defined here again
