tests/common/snapshots/test_diag_binding__common__dup_cons_fail2.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: multipile constructor varible definition!
2 | | A
  |   ^
the identifier A is defined here
7 | | A
  |   ^
and it is defined here again
