tests/common/snapshots/test_diag_binding__common__shadowing_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: cannot match type!
5 |     guard x = y;
  |               ^
the expression here has type Int, but expected Bool.
