tests/common/snapshots/test_diag_binding__common__unused_var_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Warn]: unused value varible!
3 |     let y = x + 1;
  |         ^
the identifier y is defined here, but never used
