tests/common/snapshots/test_diag_binding__common__wildcard_fail.snap
---
source: tests/common/mod.rs
expression: "String::from_utf8(msg_out).unwrap()"
---
[Error]: multipile value varible definition!
3 |     let (z, z) = (x, y);
  |          ^
the identifier z is defined here
3 |     let (z, z) = (x, y);
  |             ^
and it is defined here again

[Warn]: unused value varible!
3 |     let (z, z) = (x, y);
  |             ^
the identifier z is defined here, but never used
